# MetaPhysicL

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  makerelease.sh  metaphysicl_config.h.tmp.in
doxygen/: Makefile.am  Makefile.in  aminclude.am  helloworld.page  metaphysicl.dox  metaphysicl.dox.in
m4/: acsm_cxx_tests.m4  config_summary.m4  feexcept.m4
m4/common/: ax_cxx_compile_stdcxx.m4  boost.m4  compiler_control_args.m4  masa.m4  maybe_mpicxx_compiler.m4  metaphysicl.m4  metaphysicl_compiler.m4  scrape_petsc.m4  timpi.m4  timpi_control_args.m4  vexcl.m4
share/aclocal/: helloworld.m4  metaphysicl.m4
src/: Makefile.am  Makefile.in
src/apps/: version.C
src/common/lic_utils/: update_license.pl
src/core/include/helloworld/: core.h
src/core/include/metaphysicl/: compare_types.h  core.h  ct_set.h  ct_types.h  metaphysicl_common.h
src/core/src/: test_file.C
src/graphs/include/metaphysicl/: physics.h
src/numerics/include/metaphysicl/: dualderivatives.h  dualdynamicsparsenumberarray.h  dualdynamicsparsenumberarray_decl.h  dualdynamicsparsenumbervector.h  dualdynamicsparsenumbervector_decl.h  dualexpression.h  dualnamedarray.h  dualnumber.h  dualnumber_decl.h  dualnumber_forward.h  dualnumber_surrogate.h  dualnumber_surrogate_decl.h  dualnumberarray.h  dualnumbervector.h  dualsemidynamicsparsenumberarray.h  dualsemidynamicsparsenumberarray_decl.h  dualshadow.h  dualshadowdynamicsparsearray.h  dualshadowdynamicsparsevector.h  dualshadowsparsestruct.h  dualshadowsparsevector.h  dualshadowvector.h  dualsparsenumberarray.h  dualsparsenumberstruct.h  dualsparsenumbervector.h  dynamicsparsenumberarray.h  dynamicsparsenumberarray_decl.h  dynamicsparsenumberbase.h  dynamicsparsenumberbase_decl.h  dynamicsparsenumbervector.h  dynamicsparsenumbervector_decl.h  gpuvector.h  namedindexarray.h  nddualnumber.h  numberarray.h  numbervector.h  parallel_dualnumber.h  parallel_dynamicsparsenumberarray.h  parallel_numberarray.h  parallel_semidynamicsparsenumberarray.h  (+8 more)
src/utilities/include/helloworld/: helloworld_asserts.h  helloworld_exceptions.h  helloworld_version.h.in  metaprogramming.h
src/utilities/include/metaphysicl/: dynamic_std_array_wrapper.h  metaphysicl_asserts.h  metaphysicl_cast.h  metaphysicl_config.h.tmp.in  metaphysicl_exceptions.h  metaphysicl_version.h.in  metaprogramming.h  parallel_dynamic_std_array_wrapper.h  testable.h
src/utilities/src/: helloworld_version.C  metaphysicl_exceptions.C  metaphysicl_version.C
test/: Makefile.am  Makefile.in  compare_types_unit.C  complex_derivs_unit.C  core_name_unit.C  ct_types_unit.C  derivs_unit.C  divgrad_unit.C  dualnamedarray_unit.C  dynamic_sparse_number_base_unit.C  dynamic_std_array_wrapper_unit.C  identities_unit.C  input_file_unit.C  input_file_unit.sh.in  instantiations_unit.C  main.C  main_unit.C  math_structs.C  math_structs.h  namedindexarray_unit.C  navier.C  navier_unit.C  navier_unit.h  nd_derivs_unit.C  parallel_unit.C  pde.C  pde_unit.C  pde_unit.h  physics_unit.C  run_unit_tests.sh.in  shadow_sparse_vector_navier_unit.C  shadow_sparse_vector_pde_unit.C  sparse_derivs_unit.C  sparse_identities_unit.C  sparse_vector_navier_unit.C  sparse_vector_pde_unit.C  testdecltype.C  testheaders_unit.C  testing.h  testlambda.C  (+1 more)
