BUILT_SOURCES   = .license.stamp

#----------------------------------------
# Programs and libraries we want to build
#----------------------------------------

bin_PROGRAMS    = metaphysicl_version 

lib_LTLIBRARIES = libmetaphysicl.la

#----------------------------------------------
# List of source files to build dynamic library
#----------------------------------------------
libmetaphysicl_la_SOURCES =

# utilities
libmetaphysicl_la_SOURCES += utilities/src/metaphysicl_version.C

#----------------------------
# INCLUDES we want distributed
#----------------------------
includedir = $(prefix)/include/metaphysicl
include_HEADERS =

# core
include_HEADERS += core/include/metaphysicl/compare_types.h
include_HEADERS += core/include/metaphysicl/ct_set.h

# graphs
include_HEADERS += graphs/include/metaphysicl/physics.h

# numerics
include_HEADERS += numerics/include/metaphysicl/dualnumber.h
include_HEADERS += numerics/include/metaphysicl/dualnumbervector.h
include_HEADERS += numerics/include/metaphysicl/dualshadow.h
include_HEADERS += numerics/include/metaphysicl/dualshadowsparsestruct.h
include_HEADERS += numerics/include/metaphysicl/dualshadowsparsevector.h
include_HEADERS += numerics/include/metaphysicl/dualshadowvector.h
include_HEADERS += numerics/include/metaphysicl/dualsparsenumberstruct.h
include_HEADERS += numerics/include/metaphysicl/dualsparsenumbervector.h
include_HEADERS += numerics/include/metaphysicl/numberarray.h
include_HEADERS += numerics/include/metaphysicl/numbervector.h
include_HEADERS += numerics/include/metaphysicl/raw_type.h
include_HEADERS += numerics/include/metaphysicl/shadownumber.h
include_HEADERS += numerics/include/metaphysicl/sparsenumberstruct.h
include_HEADERS += numerics/include/metaphysicl/sparsenumbervector.h

# utilities
include_HEADERS += utilities/include/metaphysicl/metaphysicl_asserts.h
include_HEADERS += utilities/include/metaphysicl/metaphysicl_exceptions.h
include_HEADERS += utilities/include/metaphysicl/metaprogramming.h
include_HEADERS += utilities/include/metaphysicl/testable.h

# Needs to be builddir since this is generated by configure
include_HEADERS += $(top_builddir)/src/utilities/include/metaphysicl/metaphysicl_version.h

# Version app
metaphysicl_version_SOURCES = apps/version.C
metaphysicl_version_LDADD = libmetaphysicl.la

#--------------------------------------
#Local Directories to include for build
#--------------------------------------
AM_CPPFLAGS  = 
AM_CPPFLAGS += -I$(top_srcdir)/src/core/include
AM_CPPFLAGS += -I$(top_srcdir)/src/graphs/include
AM_CPPFLAGS += -I$(top_srcdir)/src/numerics/include
AM_CPPFLAGS += -I$(top_srcdir)/src/utilities/include
AM_CPPFLAGS += -I$(top_builddir)/src/utilities/include #metaphysicl_version.h

#--------------
# Code coverage
#--------------
if CODE_COVERAGE_ENABLED
  CLEANFILES = *.gcda *.gcno
endif

#---------------------------------
# Embedded license header support
#---------------------------------

.license.stamp: $(top_srcdir)/LICENSE
	$(top_srcdir)/src/common/lic_utils/update_license.pl $(top_srcdir)/LICENSE \
        $(top_srcdir)/src/core/include/metaphysicl/*.h \
	$(top_srcdir)/src/utilities/include/metaphysicl/*.h \
	$(top_srcdir)/src/core/src/*.C \
        $(top_srcdir)/src/utilities/src/*.C \
        $(top_srcdir)/src/apps/*.C
	echo 'updated source license headers' >$@

EXTRA_DIST = common

